seperated employee&holiday

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=wngus0412
 
 # mapper.xml 위치 지정
-mybatis.mapper-locations=mybatis/mapper.xml
+mybatis.mapper-locations=mybatis/mapper.xml, mybatis/holidayMapper.xml
 
 # 패키지 로깅 레벨 지정 가능
 logging.level.com=debug
