--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ logging.level.com=debug
 
 # 모델의 카멜 케이스와 DB에서 사용하는 언더바 방식을 전환해주는 설정
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.mvc.view.prefix=WEB-INF/
