Create 'index' outline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.password=wngus0412
 mybatis.mapper-locations=mybatis/mapper.xml, mybatis/holidayMapper.xml
 
 # 패키지 로깅 레벨 지정 가능
-logging.level.com=debug
+# logging.level.com=debug
+logging.level.org.apache.jasper.servlet.JspServlet=debug
 
 # 모델의 카멜 케이스와 DB에서 사용하는 언더바 방식을 전환해주는 설정
 mybatis.configuration.map-underscore-to-camel-case=true
